--- a/szperacz_raport.tex
+++ b/szperacz_raport.tex
@@ -75,7 +75,18 @@ Perl został wykorzystany głównie w procesie tokenizacji, obsługi wejścia, w
 
 W implementacji wykorzystano następujące biblioteki:
 \begin{itemize}
-\item Paweł
+\item Term::ProgressBar
+Pasek postępu przy tworzeniu indeksu.
+
+\item Inline::C
+Korzystanie z kodu C z poziomu perla.
+
+\item Storable
+Zapisywania prostych struktur perlowych na dysku.
+
+\item Test::More,File::Temp,Test::File::Contents
+Biblioteki używane w testach jednostkowych.
+
 \end{itemize}
 
 \section{Wyniki testów}
