Another piece of text in raport written.

--- a/szperacz_raport.tex
+++ b/szperacz_raport.tex
@@ -29,11 +29,7 @@
 
 Na płycie załączone są programy wyszukujące w formacie binarnym: tokenize.bin i search.bin.
 Należy je uruchomić w katalogu zawierającym morfologik.
-Aby utworzyć indeksy należy odpalić "tokenize.bin sciezka_do_wikipedi" oraz "tokenize.bin sciezka_do_wikipedi 1", aby utworzyć indeks używający stemmingu.
-
-
-Aby uruchomić wyszukiwarkę ze źródeł wymagana jest aktualna instalacja perl oraz instalacja wykorzystanych modułów.
-
+Aby utworzyć indeksy należy odpalić $tokenize.bin \quad sciezka do wikipedii$ oraz $tokenize.bin \quad sciezka do wikipedii \quad 1$, aby utworzyć indeks używający stemmingu.\\\\Aby uruchomić wyszukiwarkę ze źródeł wymagana jest aktualna instalacja perl oraz instalacja wykorzystanych modułów.\\\\
 $
 curl -L http://xrl.us/perlbrewinstall | bash \newline
 echo 'source ~/perl5/perlbrew/etc/bashrc' >> ~/.bashrc \newline
